[gd_scene load_steps=6 format=4 uid="uid://ddp21if3hoxl3"]

[ext_resource type="Script" uid="uid://r1xnypf3l6mh" path="res://test_scene/test_floors.gd" id="1_lggmv"]
[ext_resource type="TileSet" uid="uid://d2ki4qat4ap4d" path="res://tile_set/stone_tile_set.tres" id="1_vmfcw"]
[ext_resource type="PackedScene" uid="uid://b5gjy82f3k5no" path="res://creep/creep.tscn" id="2_boupy"]
[ext_resource type="PackedScene" uid="uid://d03bvotq7tym5" path="res://hero/hero_scene.tscn" id="3_21nl1"]
[ext_resource type="PackedScene" uid="uid://crcqgxbyhvtha" path="res://trees/tree.tscn" id="4_f4gjm"]

[node name="world" type="Node2D"]

[node name="TileMap" type="Node2D" parent="."]
script = ExtResource("1_lggmv")

[node name="Map–°overFloor1" type="TileMapLayer" parent="TileMap"]
position = Vector2(544, 288)
tile_map_data = PackedByteArray("AAAGAAMAAgADAAIAAAAGAAQAAgADAAMAAAAGAAUAAgADAAAAAAAGAAYAAgADAAEAAAAHAAMAAgAAAAIAAAAHAAQAAgAAAAMAAAAHAAUAAgAAAAAAAAAHAAYAAgAAAAEAAAAIAAMAAgABAAIAAAAIAAQAAgABAAMAAAAIAAUAAgABAAAAAAAIAAYAAgABAAEAAAAJAAMAAgACAAIAAAAJAAQAAgACAAMAAAAJAAUAAgACAAAAAAAJAAYAAgACAAEAAAAGAAcAAgADAAIAAAAGAAgAAgADAAMAAAAGAAkAAgADAAAAAAAHAAcAAgAAAAIAAAAHAAgAAgAAAAMAAAAHAAkAAgAAAAAAAAAIAAcAAgABAAIAAAAIAAgAAgABAAMAAAAIAAkAAgABAAAAAAAJAAcAAgACAAIAAAAJAAgAAgACAAMAAAAJAAkAAgACAAAAAAAKAAMAAgADAAIAAAAKAAQAAgADAAMAAAAKAAUAAgADAAAAAAAKAAYAAgADAAEAAAALAAMAAgAAAAIAAAALAAQAAgAAAAMAAAALAAUAAgAAAAAAAAALAAYAAgAAAAEAAAAMAAMAAgABAAIAAAAMAAQAAgABAAMAAAAMAAUAAgABAAAAAAAMAAYAAgABAAEAAAANAAMAAgACAAIAAAANAAQAAgACAAMAAAANAAUAAgACAAAAAAANAAYAAgACAAEAAAAKAAcAAgADAAIAAAAKAAgAAgADAAMAAAAKAAkAAgADAAAAAAALAAcAAgAAAAIAAAALAAgAAgAAAAMAAAALAAkAAgAAAAAAAAAMAAcAAgABAAIAAAAMAAgAAgABAAMAAAAMAAkAAgABAAAAAAANAAcAAgACAAIAAAANAAgAAgACAAMAAAANAAkAAgACAAAAAAAOAAMAAgADAAIAAAAOAAQAAgADAAMAAAAOAAUAAgADAAAAAAAOAAYAAgADAAEAAAAOAAcAAgADAAIAAAAOAAgAAgADAAMAAAAOAAkAAgADAAAAAAABAAMAAgACAAIAAAABAAQAAgACAAMAAAACAAMAAgADAAIAAAACAAQAAgADAAMAAAABAAUAAgACAAAAAAABAAYAAgACAAEAAAABAAcAAgACAAIAAAABAAgAAgACAAMAAAACAAUAAgADAAAAAAACAAYAAgADAAEAAAACAAcAAgADAAIAAAACAAgAAgADAAMAAAABAAkAAgACAAAAAAABAAoAAgACAAEAAAABAAsAAgACAAIAAAABAAwAAgACAAMAAAACAAkAAgADAAAAAAACAAoAAgADAAEAAAACAAsAAgADAAIAAAACAAwAAgADAAMAAAADAAMAAgAAAAIAAAADAAQAAgAAAAMAAAAEAAMAAgABAAIAAAAFAAMAAgACAAIAAAAFAAQAAgACAAMAAAADAAUAAgAAAAAAAAADAAYAAgAAAAEAAAADAAcAAgAAAAIAAAADAAgAAgAAAAMAAAAEAAYAAgABAAEAAAAEAAcAAgABAAIAAAAEAAgAAgABAAMAAAAFAAUAAgACAAAAAAAFAAYAAgACAAEAAAAFAAcAAgACAAIAAAAFAAgAAgACAAMAAAADAAkAAgAAAAAAAAADAAoAAgAAAAEAAAADAAsAAgAAAAIAAAADAAwAAgAAAAMAAAAEAAkAAgABAAAAAAAEAAoAAgABAAEAAAAEAAsAAgABAAIAAAAEAAwAAgABAAMAAAAFAAkAAgACAAAAAAAFAAoAAgACAAEAAAAFAAsAAgACAAIAAAAFAAwAAgACAAMAAAAGAAoAAgADAAEAAAAGAAsAAgADAAIAAAAGAAwAAgADAAMAAAAHAAoAAgAAAAEAAAAHAAsAAgAAAAIAAAAHAAwAAgAAAAMAAAAIAAoAAgABAAEAAAAIAAsAAgABAAIAAAAIAAwAAgABAAMAAAAJAAoAAgACAAEAAAAJAAsAAgACAAIAAAAJAAwAAgACAAMAAAAKAAoAAgADAAEAAAAKAAsAAgADAAIAAAAKAAwAAgADAAMAAAALAAoAAgAAAAEAAAALAAsAAgAAAAIAAAALAAwAAgAAAAMAAAAMAAoAAgABAAEAAAAMAAsAAgABAAIAAAAMAAwAAgABAAMAAAANAAoAAgACAAEAAAANAAsAAgACAAIAAAANAAwAAgACAAMAAAAOAAoAAgADAAEAAAAOAAsAAgADAAIAAAAOAAwAAgADAAMAAAD+/wsAAgAAAAMAAAD3/wAAAgAAAAAAAAD4/wAAAgAAAAIAAAD5/wAAAgABAAIAAAD6/wAAAgACAAIAAAD7/wAAAgADAAIAAAD8/wAAAgAAAAIAAAD9/wAAAgABAAIAAAD+/wAAAgACAAIAAAD//wAAAgADAAIAAAAAAAAAAgAAAAIAAAABAAAAAgABAAIAAAABAAEAAgABAAMAAAACAAAAAgACAAIAAAACAAEAAgACAAMAAAADAAAAAgADAAIAAAADAAEAAgADAAMAAAAEAAEAAgAAAAMAAAAAAAIAAgAAAAAAAAABAAIAAgABAAAAAAACAAIAAgACAAAAAAADAAIAAgADAAAAAAAEAAIAAgAAAAAAAAAFAAIAAgABAAAAAAAGAAIAAgACAAAAAAAHAAIAAgADAAAAAAAIAAIAAgAAAAAAAAAJAAIAAgABAAAAAAAKAAIAAgACAAAAAAALAAIAAgADAAAAAAAMAAIAAgAAAAAAAAANAAIAAgABAAAAAAAOAAIAAgACAAAAAAAFAAEAAgABAAAAAAD1/w0AAgAAAAMAAAD2/w0AAgABAAMAAAD3/w0AAgADAAMAAAD4/w0AAgABAAAAAAD5/w0AAgACAAAAAAD6/w0AAgADAAAAAAD7/w0AAgAAAAAAAAD8/w0AAgABAAAAAAD9/w0AAgACAAAAAAD+/w0AAgADAAAAAAABAA0AAgACAAAAAAACAA0AAgADAAAAAAADAA0AAgAAAAAAAAAEAA0AAgABAAAAAAAFAA0AAgACAAAAAAAGAA0AAgADAAAAAAAHAA0AAgAAAAAAAAAIAA0AAgABAAAAAAAJAA0AAgACAAAAAAAKAA0AAgADAAAAAAALAA0AAgAAAAAAAAAMAA0AAgABAAAAAAANAA0AAgACAAAAAAAOAA0AAgADAAAAAADx/wAAAgAAAAIAAADx/wEAAgAAAAMAAADy/wAAAgABAAIAAADy/wEAAgABAAMAAADz/wAAAgACAAIAAADz/wEAAgACAAMAAAD0/wAAAgADAAIAAAD0/wEAAgADAAMAAADx/wIAAgAAAAAAAADx/wMAAgAAAAEAAADx/wQAAgAAAAIAAADx/wUAAgAAAAMAAADy/wIAAgABAAAAAADy/wMAAgABAAEAAADy/wQAAgABAAIAAADy/wUAAgABAAMAAADz/wIAAgACAAAAAADz/wMAAgACAAEAAADz/wQAAgACAAIAAADz/wUAAgACAAMAAAD0/wIAAgADAAAAAAD0/wMAAgADAAEAAAD0/wQAAgADAAIAAAD0/wUAAgADAAMAAADx/wYAAgAAAAAAAADx/wcAAgAAAAEAAADx/wgAAgAAAAIAAADx/wkAAgAAAAMAAADy/wYAAgABAAAAAADy/wcAAgABAAEAAADy/wgAAgABAAIAAADy/wkAAgABAAMAAADz/wYAAgACAAAAAADz/wcAAgACAAEAAADz/wgAAgACAAIAAADz/wkAAgACAAMAAAD0/wYAAgADAAAAAAD0/wcAAgADAAEAAAD0/wgAAgADAAIAAAD0/wkAAgADAAMAAADx/woAAgAAAAAAAADx/wsAAgAAAAEAAADx/wwAAgAAAAIAAADx/w0AAgAAAAMAAADy/woAAgABAAAAAADy/wsAAgABAAEAAADy/wwAAgABAAIAAADy/w0AAgABAAMAAADz/woAAgACAAAAAADz/wsAAgACAAEAAADz/wwAAgACAAIAAADz/w0AAgACAAMAAAD0/woAAgADAAAAAAD0/wsAAgADAAEAAAD0/wwAAgADAAIAAAD0/w0AAgADAAMAAAD1/wAAAgAAAAIAAAD1/wEAAgAAAAMAAAD2/wAAAgABAAIAAAD2/wEAAgABAAMAAAD1/wIAAgAAAAAAAAD1/wMAAgAAAAEAAAD1/wQAAgAAAAIAAAD1/wUAAgAAAAMAAAD2/wIAAgABAAAAAAD2/wMAAgABAAEAAAD2/wQAAgABAAIAAAD2/wUAAgABAAMAAAD1/wYAAgAAAAAAAAD1/wcAAgAAAAEAAAD1/wgAAgAAAAIAAAD1/wkAAgAAAAIAAAD2/wYAAgABAAAAAAD2/wcAAgABAAEAAAD1/woAAgACAAAAAAD1/wsAAgACAAAAAAD1/wwAAgAAAAIAAAD2/wsAAgABAAEAAAD2/wwAAgAAAAMAAADx//r/AgABAAIAAADx//v/AgADAAMAAADy//r/AgACAAEAAADy//v/AgAAAAEAAADz//r/AgACAAIAAADz//v/AgACAAMAAAD0//r/AgADAAIAAAD0//v/AgADAAMAAADx//z/AgADAAMAAADx//3/AgABAAEAAADx//7/AgAAAAIAAADx////AgAAAAMAAADy//z/AgABAAIAAADy//3/AgAAAAIAAADy//7/AgABAAIAAADy////AgABAAMAAADz//z/AgACAAAAAADz//3/AgACAAEAAADz//7/AgACAAIAAADz////AgACAAMAAAD0//z/AgADAAAAAAD0//3/AgADAAEAAAD0//7/AgADAAIAAAD0////AgADAAMAAAD1//r/AgAAAAIAAAD1//v/AgAAAAMAAAD2//r/AgABAAIAAAD2//v/AgABAAMAAAD3//r/AgACAAIAAAD3//v/AgACAAMAAAD4//r/AgADAAIAAAD4//v/AgADAAMAAAD1//z/AgAAAAAAAAD1//3/AgAAAAEAAAD1//7/AgAAAAIAAAD1////AgAAAAMAAAD2//z/AgABAAAAAAD2//3/AgABAAEAAAD2//7/AgABAAIAAAD2////AgABAAMAAAD3//z/AgACAAAAAAD3//3/AgACAAEAAAD3//7/AgACAAIAAAD3////AgACAAMAAAD4//z/AgADAAAAAAD4//3/AgADAAEAAAD4//7/AgADAAIAAAD4////AgADAAMAAAD5//r/AgAAAAIAAAD5//v/AgAAAAMAAAD6//r/AgABAAIAAAD6//v/AgABAAMAAAD7//r/AgACAAIAAAD7//v/AgACAAMAAAD8//r/AgADAAIAAAD8//v/AgADAAMAAAD5//z/AgAAAAAAAAD5//3/AgAAAAEAAAD5//7/AgAAAAIAAAD5////AgAAAAMAAAD6//z/AgABAAAAAAD6//3/AgABAAEAAAD6//7/AgABAAIAAAD6////AgABAAMAAAD7//z/AgACAAAAAAD7//3/AgACAAEAAAD7//7/AgACAAIAAAD7////AgACAAMAAAD8//z/AgADAAAAAAD8//3/AgADAAEAAAD8//7/AgADAAIAAAD8////AgADAAMAAAD9//r/AgAAAAIAAAD9//v/AgAAAAMAAAD9//z/AgAAAAAAAAD9//3/AgAAAAEAAAD9//7/AgAAAAIAAAD9////AgAAAAMAAAD+//3/AgABAAEAAAD+//7/AgABAAIAAAD+////AgABAAMAAAD///3/AgACAAEAAAD///7/AgACAAIAAAD/////AgACAAMAAAAAAP3/AgADAAEAAAAAAP7/AgADAAIAAAAAAP//AgADAAMAAAABAP3/AgAAAAEAAAABAP7/AgAAAAIAAAABAP//AgAAAAMAAAACAP7/AgABAAIAAAACAP//AgABAAMAAAADAP7/AgACAAIAAAADAP//AgACAAMAAADx//f/AgABAAAAAADx//j/AgADAAEAAADx//n/AgADAAIAAADy//f/AgAAAAMAAADy//j/AgACAAIAAADy//n/AgAAAAIAAADz//f/AgACAAEAAADz//j/AgACAAIAAADz//n/AgACAAMAAAD0//f/AgADAAEAAAD0//j/AgADAAIAAAD0//n/AgADAAMAAAD1//f/AgAAAAEAAAD1//j/AgAAAAIAAAD1//n/AgAAAAMAAAD2//f/AgABAAEAAAD2//j/AgABAAIAAAD2//n/AgABAAMAAAD3//f/AgACAAEAAAD3//j/AgACAAIAAAD3//n/AgACAAMAAAD4//f/AgADAAEAAAD4//j/AgADAAIAAAD4//n/AgADAAMAAAD5//f/AgAAAAEAAAD5//j/AgAAAAIAAAD5//n/AgAAAAMAAAD6//f/AgABAAEAAAD6//j/AgABAAIAAAD6//n/AgABAAMAAAD7//f/AgACAAEAAAD7//j/AgACAAIAAAD7//n/AgACAAMAAAD8//f/AgADAAEAAAD8//j/AgADAAIAAAD8//n/AgADAAMAAAD9//f/AgAAAAEAAAD9//j/AgAAAAIAAAD9//n/AgAAAAMAAADv/wEAAgADAAEAAADv/wIAAgABAAIAAADv/wMAAgADAAIAAADv/wQAAgABAAMAAADv/wUAAgADAAEAAADv/wYAAgAAAAEAAADv/wcAAgACAAIAAADv/wgAAgADAAMAAADv/wkAAgADAAIAAADv/woAAgACAAEAAADv/wsAAgACAAEAAADv/wwAAgABAAEAAADv/w0AAgACAAMAAADw/wEAAgADAAEAAADw/wIAAgACAAEAAADw/wMAAgAAAAIAAADw/wQAAgABAAAAAADw/wUAAgAAAAMAAADw/wYAAgABAAIAAADw/wcAAgACAAEAAADw/wgAAgAAAAMAAADw/wkAAgADAAMAAADw/woAAgADAAMAAADw/wsAAgADAAEAAADw/wwAAgADAAEAAADw/w0AAgADAAEAAADw/wAAAgABAAEAAADv//z/AgABAAEAAADv//3/AgADAAMAAADv//7/AgABAAAAAADv////AgAAAAMAAADw//z/AgACAAEAAADw//3/AgADAAIAAADw//7/AgABAAIAAADw////AgABAAAAAADv//f/AgAAAAMAAADv//j/AgABAAAAAADv//n/AgACAAAAAADv//r/AgAAAAMAAADv//v/AgACAAIAAADw//f/AgADAAIAAADw//j/AgADAAEAAADw//n/AgACAAEAAADw//r/AgADAAEAAADw//v/AgABAAAAAADv/wAAAgABAAIAAAAMAAEAAgACAAEAAAANAAEAAgADAAAAAAAOAAEAAgADAAMAAAAPAAEAAgADAAEAAAAQAAEAAgACAAAAAAARAAEAAgABAAAAAAASAAEAAgADAAIAAAATAAEAAgAAAAMAAAAPAAIAAgADAAIAAAAPAAMAAgACAAAAAAAPAAQAAgABAAMAAAAPAAUAAgAAAAAAAAAPAAYAAgABAAEAAAAPAAcAAgACAAMAAAAQAAIAAgABAAIAAAAQAAMAAgACAAEAAAAQAAQAAgACAAMAAAAQAAUAAgAAAAMAAAAQAAYAAgADAAMAAAAQAAcAAgAAAAMAAAARAAIAAgACAAEAAAARAAMAAgADAAIAAAARAAQAAgAAAAIAAAARAAUAAgAAAAAAAAARAAYAAgADAAEAAAARAAcAAgADAAIAAAASAAIAAgADAAMAAAASAAMAAgADAAMAAAASAAQAAgADAAIAAAASAAUAAgACAAIAAAASAAYAAgADAAMAAAASAAcAAgABAAEAAAAPAAgAAgABAAIAAAAPAAkAAgABAAAAAAAPAAoAAgABAAMAAAAPAAsAAgACAAIAAAAPAAwAAgABAAEAAAAPAA0AAgADAAIAAAAQAAgAAgACAAAAAAAQAAkAAgACAAMAAAAQAAoAAgADAAMAAAAQAAsAAgACAAIAAAAQAAwAAgADAAAAAAAQAA0AAgAAAAAAAAARAAgAAgABAAAAAAARAAkAAgADAAIAAAARAAoAAgADAAMAAAARAAsAAgADAAMAAAARAAwAAgADAAMAAAARAA0AAgAAAAEAAAASAAgAAgADAAAAAAASAAkAAgACAAMAAAASAAoAAgACAAAAAAASAAsAAgAAAAAAAAASAAwAAgADAAAAAAASAA0AAgABAAIAAAATAAIAAgABAAAAAAATAAMAAgAAAAEAAAATAAQAAgACAAAAAAATAAUAAgABAAAAAAATAAYAAgABAAIAAAATAAcAAgAAAAAAAAATAAgAAgABAAIAAAATAAkAAgAAAAEAAAATAAoAAgADAAAAAAATAAsAAgACAAMAAAATAAwAAgAAAAEAAAATAA0AAgABAAMAAAAUAPT/AgAAAAMAAAAUAPX/AgADAAIAAAAUAPb/AgABAAEAAAAUAPf/AgAAAAIAAAAUAPj/AgABAAMAAAAUAPn/AgABAAIAAAAUAPr/AgAAAAAAAAAUAPv/AgAAAAIAAAAUAPz/AgACAAAAAAAUAP3/AgABAAMAAAAUAP7/AgAAAAEAAAAUAP//AgACAAEAAAAUAAAAAgADAAEAAAAUAAEAAgADAAMAAAAUAAIAAgADAAAAAAAUAAMAAgADAAMAAAAUAAQAAgABAAEAAAAVAPT/AgADAAIAAAAVAPX/AgADAAEAAAAVAPb/AgACAAEAAAAVAPf/AgACAAEAAAAVAPj/AgADAAIAAAAVAPn/AgADAAEAAAAVAPr/AgADAAIAAAAVAPv/AgADAAMAAAAVAPz/AgACAAEAAAAVAP3/AgACAAEAAAAVAP7/AgACAAAAAAAVAP//AgABAAEAAAAVAAAAAgAAAAEAAAAVAAEAAgAAAAIAAAAVAAIAAgADAAEAAAAVAAMAAgAAAAMAAAAVAAQAAgACAAMAAAAWAPT/AgABAAAAAAAWAPX/AgABAAIAAAAWAPb/AgABAAEAAAAWAPf/AgAAAAAAAAAWAPj/AgADAAIAAAAWAPn/AgADAAIAAAAWAPr/AgAAAAIAAAAWAPv/AgACAAIAAAAWAPz/AgACAAAAAAAWAP3/AgAAAAAAAAAWAP7/AgADAAIAAAAWAP//AgABAAAAAAAWAAAAAgADAAIAAAAWAAEAAgAAAAEAAAAWAAIAAgACAAEAAAAWAAMAAgAAAAIAAAAWAAQAAgADAAEAAAAXAPT/AgABAAIAAAAXAPX/AgACAAMAAAAXAPb/AgACAAIAAAAXAPf/AgACAAMAAAAXAPj/AgADAAMAAAAXAPn/AgABAAIAAAAXAPr/AgADAAAAAAAXAPv/AgADAAMAAAAXAPz/AgACAAAAAAAXAP3/AgADAAIAAAAXAP7/AgABAAMAAAAXAP//AgAAAAMAAAAXAAAAAgADAAEAAAAXAAEAAgAAAAEAAAAXAAIAAgAAAAMAAAAXAAMAAgADAAEAAAAXAAQAAgADAAMAAAAYAPT/AgAAAAAAAAAYAPX/AgACAAIAAAAYAPb/AgABAAIAAAAYAPf/AgAAAAIAAAAYAPj/AgADAAIAAAAYAPn/AgACAAMAAAAYAPr/AgAAAAMAAAAYAPv/AgABAAEAAAAYAPz/AgAAAAAAAAAYAP3/AgABAAEAAAAYAP7/AgADAAEAAAAYAP//AgACAAEAAAAYAAAAAgADAAAAAAAYAAEAAgAAAAIAAAAYAAIAAgABAAEAAAAYAAMAAgABAAMAAAAYAAQAAgAAAAAAAAD9//H/AgABAAEAAAD9//L/AgAAAAAAAAD9//P/AgADAAIAAAD9//T/AgACAAAAAAD9//X/AgABAAAAAAD9//b/AgABAAEAAAD+//H/AgABAAEAAAD+//L/AgADAAMAAAD+//P/AgABAAMAAAD+//T/AgABAAAAAAD+//X/AgADAAMAAAD+//b/AgAAAAEAAAD///H/AgADAAEAAAD///L/AgAAAAEAAAD///P/AgABAAAAAAAAAPH/AgACAAEAAAAAAPL/AgADAAAAAAAAAPP/AgACAAEAAAABAPH/AgADAAAAAAABAPL/AgACAAAAAAABAPP/AgACAAMAAAACAPH/AgACAAEAAAACAPL/AgACAAAAAAACAPP/AgABAAMAAAADAPH/AgABAAMAAAADAPL/AgAAAAEAAAADAPP/AgAAAAIAAAAEAPH/AgADAAAAAAAEAPL/AgABAAEAAAAEAPP/AgABAAAAAAAFAPH/AgAAAAIAAAAFAPL/AgABAAIAAAAFAPP/AgAAAAAAAAAGAPH/AgADAAIAAAAGAPL/AgADAAAAAAAGAPP/AgACAAMAAAAHAPH/AgACAAEAAAAHAPL/AgAAAAMAAAAHAPP/AgADAAIAAAAIAPH/AgABAAAAAAAIAPL/AgAAAAEAAAAIAPP/AgADAAEAAAAJAPH/AgADAAEAAAAJAPL/AgAAAAMAAAAJAPP/AgAAAAEAAAAKAPH/AgAAAAMAAAAKAPL/AgACAAMAAAAKAPP/AgABAAAAAAALAPH/AgACAAAAAAALAPL/AgACAAIAAAALAPP/AgABAAMAAAAMAPH/AgADAAEAAAAMAPL/AgABAAIAAAAMAPP/AgACAAIAAAANAPH/AgACAAMAAAANAPL/AgABAAMAAAANAPP/AgAAAAAAAAAOAPH/AgABAAIAAAAOAPL/AgACAAMAAAAOAPP/AgABAAEAAAAPAPH/AgABAAEAAAAPAPL/AgABAAMAAAAPAPP/AgABAAIAAAAQAPH/AgAAAAMAAAAQAPL/AgABAAMAAAAQAPP/AgADAAIAAAARAPH/AgACAAIAAAARAPL/AgACAAEAAAARAPP/AgAAAAMAAAASAPH/AgABAAEAAAASAPL/AgABAAEAAAASAPP/AgAAAAIAAAATAPH/AgAAAAMAAAATAPL/AgAAAAAAAAATAPP/AgACAAIAAAAVAPD/AgABAAEAAAAVAPH/AgADAAIAAAAVAPL/AgADAAEAAAAWAPD/AgAAAAAAAAAWAPH/AgAAAAIAAAAWAPL/AgABAAEAAAAXAPD/AgABAAEAAAAXAPH/AgABAAMAAAAXAPL/AgACAAIAAAAYAPD/AgACAAIAAAAYAPH/AgADAAEAAAAYAPL/AgACAAAAAAAUAPD/AgACAAMAAAAUAPH/AgAAAAAAAAAUAPL/AgADAAEAAAAUAPP/AgACAAAAAAAVAPP/AgACAAEAAAAWAPP/AgAAAAEAAAAXAPP/AgADAAEAAAAYAPP/AgACAAIAAAAZAPD/AgABAAMAAAAZAPH/AgADAAIAAAAZAPL/AgADAAMAAAAZAPP/AgADAAMAAAD8//D/AgACAAEAAAD9//D/AgAAAAIAAAD+//D/AgADAAAAAAD///D/AgADAAIAAAAAAPD/AgABAAAAAAABAPD/AgABAAAAAAACAPD/AgACAAIAAAADAPD/AgACAAIAAAAEAPD/AgACAAAAAAAFAPD/AgAAAAMAAAAGAPD/AgAAAAAAAAAHAPD/AgADAAIAAAAIAPD/AgAAAAMAAAAJAPD/AgAAAAEAAAAKAPD/AgAAAAAAAAALAPD/AgAAAAIAAAAMAPD/AgADAAAAAAANAPD/AgACAAAAAAAOAPD/AgACAAMAAAAPAPD/AgABAAAAAAAQAPD/AgAAAAAAAAARAPD/AgABAAEAAAASAPD/AgADAAEAAAATAPD/AgABAAAAAAD6//D/AgACAAAAAAD6//H/AgADAAEAAAD6//L/AgACAAIAAAD6//P/AgADAAMAAAD6//T/AgABAAIAAAD6//X/AgACAAIAAAD6//b/AgADAAMAAAD7//D/AgABAAAAAAD7//H/AgACAAAAAAD7//L/AgADAAAAAAD7//P/AgACAAMAAAD7//T/AgACAAMAAAD7//X/AgACAAIAAAD7//b/AgAAAAAAAAD8//H/AgADAAEAAAD8//L/AgACAAIAAAD8//P/AgABAAAAAAD8//T/AgACAAMAAAD8//X/AgAAAAIAAAD8//b/AgADAAIAAAAJAAEAAgACAAMAAAAIAAEAAgAAAAMAAAAHAAEAAgACAAAAAAAEAPz/AgAAAAEAAAAEAP3/AgABAAAAAAAEAP7/AgABAAMAAAAEAP//AgABAAEAAAAEAAAAAgACAAAAAAADAPz/AgADAAAAAAADAP3/AgAAAAIAAAACAP3/AgACAAEAAAACAPz/AgADAAMAAAABAPz/AgABAAMAAAAAAPz/AgACAAAAAAD///z/AgADAAMAAAD+//z/AgABAAIAAAD+//f/AgABAAEAAAD+//j/AgAAAAMAAAD+//n/AgACAAIAAAD+//r/AgABAAEAAAD+//v/AgAAAAEAAAAEAAUAAgADAAEAAAAEAAQAAgACAAMAAAAGAAEAAgACAAIAAAD+/wwAAgAAAAEAAAD9/wwAAgADAAAAAAD8/wwAAgAAAAMAAAD7/wwAAgADAAIAAAD6/wwAAgACAAAAAAAAAAYAAgADAAMAAAAAAAUAAgACAAIAAAAAAAQAAgACAAIAAAD+/wgAAgADAAIAAAD//wgAAgACAAMAAAAAAAgAAgACAAMAAAAAAAcAAgACAAEAAAAAAAkAAgAAAAEAAAAAAAoAAgACAAIAAAAAAAsAAgACAAIAAAAAAAwAAgAAAAAAAAD//wkAAgADAAMAAAD+/wkAAgABAAEAAAD+/woAAgAAAAMAAAD//wsAAgAAAAIAAAD//wwAAgABAAMAAAD//w0AAgABAAIAAAAAAA0AAgACAAAAAAD//woAAgADAAMAAAAAAAMAAgADAAEAAAD//wEAAgAAAAAAAAD+/wEAAgABAAEAAAD9/wEAAgAAAAAAAAD8/wEAAgACAAAAAAD7/wEAAgAAAAIAAAD6/wEAAgACAAIAAAD5/wEAAgACAAAAAAD4/wEAAgACAAMAAAD3/wEAAgABAAEAAAD3/wIAAgAAAAMAAAD3/wMAAgAAAAIAAAD3/wQAAgACAAIAAAD3/wUAAgAAAAMAAAD3/wYAAgABAAIAAAD3/wcAAgADAAAAAAD3/wgAAgADAAEAAAD3/wkAAgAAAAEAAAD3/woAAgACAAEAAAD3/wsAAgACAAMAAAD3/wwAAgACAAEAAAD4/wwAAgAAAAEAAAD5/wwAAgADAAEAAAD2/wkAAgABAAEAAAD2/wgAAgACAAEAAAD2/woAAgABAAIAAAA=")
tile_set = ExtResource("1_vmfcw")
metadata/_edit_lock_ = true

[node name="Map–°overFloor2" type="TileMapLayer" parent="TileMap"]
z_index = 1
z_as_relative = false
tile_map_data = PackedByteArray("AAAJAAsAAgAAAAAAAAAJAAwAAgAAAAEAAAAJAA0AAgAAAAIAAAAJAA4AAgAAAAMAAAAKAAsAAgABAAAAAAAKAAwAAgABAAEAAAAKAA0AAgABAAIAAAAKAA4AAgABAAMAAAALAAsAAgACAAAAAAALAAwAAgACAAEAAAAMAAwAAgADAAEAAAANAAwAAgAAAAEAAAAOAAwAAgABAAEAAAAOAA0AAgABAAIAAAAOAA4AAgABAAMAAAAPAAwAAgAAAAIAAAAPAA0AAgAAAAMAAAAJAA8AAgAAAAAAAAAJABAAAgAAAAEAAAAJABEAAgAAAAIAAAAJABIAAgAAAAMAAAAKAA8AAgABAAAAAAAKABAAAgABAAEAAAAKABEAAgABAAIAAAAKABIAAgABAAMAAAALABAAAgACAAEAAAALABEAAgACAAIAAAALABIAAgACAAMAAAAMABAAAgADAAEAAAAMABEAAgADAAIAAAAMABIAAgADAAMAAAANABAAAgAAAAEAAAANABEAAgAAAAIAAAANABIAAgAAAAMAAAAOAA8AAgABAAAAAAAOABAAAgABAAEAAAAOABEAAgABAAIAAAAOABIAAgABAAMAAAAWAAQAAgAAAAAAAAAWAAUAAgAAAAEAAAAWAAYAAgAAAAIAAAAWAAcAAgAAAAMAAAAXAAQAAgABAAAAAAAXAAUAAgABAAEAAAAXAAYAAgABAAIAAAAXAAcAAgABAAMAAAAYAAQAAgACAAAAAAAYAAUAAgACAAEAAAAYAAYAAgACAAIAAAAYAAcAAgACAAMAAAAZAAYAAgADAAIAAAAZAAcAAgADAAMAAAAaAAYAAgAAAAIAAAAaAAcAAgAAAAMAAAAbAAYAAgABAAIAAAAbAAcAAgABAAMAAAAcAAYAAgACAAIAAAAcAAcAAgACAAMAAAAdAAYAAgADAAIAAAAdAAcAAgADAAMAAAAeAAYAAgAAAAIAAAAeAAcAAgAAAAMAAAAfAAYAAgABAAIAAAAfAAcAAgABAAMAAAAgAAYAAgAAAAIAAAAgAAcAAgAAAAMAAAAhAAYAAgABAAIAAAAhAAcAAgABAAMAAAAiAAQAAgACAAAAAAAiAAUAAgACAAEAAAAiAAYAAgACAAIAAAAiAAcAAgACAAMAAAAjAAQAAgADAAAAAAAjAAUAAgADAAEAAAAjAAYAAgADAAIAAAAjAAcAAgADAAMAAAAkAAQAAgAAAAAAAAAkAAUAAgAAAAEAAAAkAAYAAgAAAAIAAAAkAAcAAgAAAAMAAAAWAAEAAgAAAAMAAAAWAAIAAgAAAAIAAAAWAAMAAgAAAAMAAAAXAAEAAgABAAMAAAAXAAIAAgABAAIAAAAXAAMAAgABAAMAAAAYAAEAAgACAAMAAAAYAAIAAgACAAIAAAAYAAMAAgACAAMAAAAiAAEAAgAAAAMAAAAiAAIAAgACAAIAAAAiAAMAAgACAAMAAAAjAAEAAgABAAMAAAAjAAIAAgADAAIAAAAjAAMAAgADAAMAAAAkAAEAAgACAAMAAAAkAAIAAgAAAAIAAAAkAAMAAgAAAAMAAAAQAAAAAgABAAAAAAARAAAAAgACAAAAAAASAAAAAgADAAAAAAATAAAAAgAAAAAAAAAUAAAAAgABAAAAAAAVAAAAAgACAAAAAAAWAAAAAgADAAAAAAAXAAAAAgADAAAAAAAYAAAAAgACAAIAAAAiAAAAAgAAAAIAAAAjAAAAAgABAAIAAAAkAAAAAgACAAIAAAARAAEAAgABAAAAAAASAAEAAgACAAMAAAASAAIAAgAAAAEAAAATAAIAAgADAAAAAAAUAAIAAgACAAAAAAAVAAIAAgACAAMAAAAVAAEAAgAAAAIAAAAUAAEAAgACAAIAAAATAAEAAgABAAIAAAARAAIAAgACAAAAAAAQAP//AgAAAAIAAAAQAP7/AgABAAAAAAAQAP3/AgABAAEAAAARAP3/AgADAAAAAAARAP7/AgADAAMAAAARAP//AgABAAAAAAASAP3/AgAAAAEAAAASAP7/AgABAAIAAAASAP//AgAAAAMAAAATAP3/AgACAAEAAAATAP7/AgAAAAEAAAATAP//AgACAAAAAAAUAP3/AgADAAAAAAAUAP7/AgAAAAIAAAAUAP//AgABAAMAAAAVAP3/AgADAAEAAAAVAP7/AgABAAAAAAAVAP//AgABAAEAAAAWAP3/AgADAAIAAAAWAP7/AgADAAMAAAAWAP//AgABAAMAAAAXAP3/AgACAAIAAAAXAP7/AgAAAAMAAAAXAP//AgABAAIAAAAYAP3/AgAAAAMAAAAYAP7/AgACAAMAAAAYAP//AgABAAIAAAAZAP3/AgADAAIAAAAZAP7/AgAAAAAAAAAaAP3/AgABAAEAAAAaAP7/AgACAAIAAAAbAP3/AgACAAMAAAAbAP7/AgAAAAIAAAAcAP3/AgADAAMAAAAcAP7/AgACAAEAAAAdAP3/AgABAAEAAAAdAP7/AgAAAAEAAAAeAP3/AgAAAAMAAAAeAP7/AgADAAIAAAAfAP3/AgACAAIAAAAfAP7/AgADAAEAAAAgAP3/AgADAAAAAAAgAP7/AgADAAAAAAAhAP3/AgACAAAAAAAhAP7/AgAAAAEAAAAiAP3/AgADAAMAAAAiAP7/AgABAAAAAAAiAP//AgADAAIAAAAjAP3/AgADAAMAAAAjAP7/AgADAAIAAAAjAP//AgAAAAMAAAAkAP3/AgAAAAAAAAAkAP7/AgAAAAMAAAAkAP//AgADAAAAAAAQAAEAAgAAAAMAAAAQAAIAAgACAAIAAAAMAAsAAgABAAAAAAANAAsAAgACAAMAAAAPAAsAAgADAAMAAAAOAAsAAgAAAAAAAAAQAA0AAgAAAAMAAAAQAAwAAgAAAAEAAAAQAAsAAgABAAEAAAA=")
tile_set = ExtResource("1_vmfcw")
metadata/_edit_lock_ = true

[node name="Map–°overFloor3" type="TileMapLayer" parent="TileMap"]
z_index = 2
position = Vector2(544, 288)
tile_map_data = PackedByteArray("AAD6/wYAAgACAAMAAAD7/wYAAgADAAIAAAD8/wUAAgAAAAAAAAD8/wYAAgABAAIAAAD8/wQAAgAAAAMAAAD7/wQAAgACAAMAAAAIAPb/AgABAAEAAAAIAPf/AgADAAAAAAAIAPj/AgABAAEAAAAIAPn/AgADAAMAAAAIAPr/AgAAAAIAAAAJAPr/AgACAAIAAAAKAPr/AgABAAEAAAALAPr/AgABAAMAAAAMAPr/AgABAAEAAAANAPr/AgABAAMAAAAOAPr/AgABAAAAAAAPAPr/AgACAAAAAAAQAPr/AgADAAIAAAAQAPn/AgADAAAAAAAQAPj/AgACAAIAAAAQAPf/AgACAAMAAAAQAPb/AgAAAAIAAAAPAPb/AgACAAMAAAAOAPb/AgACAAMAAAANAPb/AgACAAEAAAAMAPb/AgAAAAMAAAALAPb/AgABAAAAAAAKAPb/AgACAAIAAAAJAPb/AgADAAEAAAAJAPf/AgACAAMAAAAJAPj/AgABAAMAAAAJAPn/AgACAAAAAAAKAPn/AgABAAIAAAAMAPn/AgADAAEAAAANAPn/AgAAAAMAAAAOAPn/AgADAAMAAAAPAPn/AgAAAAAAAAAPAPj/AgAAAAMAAAAPAPf/AgADAAIAAAAOAPf/AgADAAAAAAANAPf/AgABAAAAAAAMAPf/AgACAAAAAAALAPf/AgAAAAAAAAAKAPf/AgACAAIAAAAKAPj/AgADAAEAAAALAPn/AgAAAAEAAAAMAPj/AgABAAEAAAANAPj/AgAAAAIAAAAOAPj/AgAAAAEAAAALAPj/AgADAAMAAAD7/wUAAgACAAEAAAD6/wUAAgAAAAEAAAD6/wQAAgABAAIAAAA=")
tile_set = ExtResource("1_vmfcw")
metadata/_edit_lock_ = true

[node name="WallMapFloor1" type="TileMapLayer" parent="TileMap"]
z_as_relative = false
tile_map_data = PackedByteArray("AAAjAAkAAAACAAMAAAAgAAkAAAACAAMAAAAfAAkAAAACAAMAAAAeAAkAAAACAAMAAAAdAAkAAAACAAMAAAAaAAkAAAACAAMAAAAZAAkAAAACAAMAAAAYAAkAAAACAAMAAAAXAAkAAAACAAMAAAAWAAkAAAABAAMAAAAkAAkAAAADAAMAAAAkAAcAAAADAAIAAAAkAAYAAAADAAIAAAAkAAUAAAADAAIAAAAkAAAAAAADAAIAAAAkAAEAAAADAAIAAAAkAAIAAAADAAIAAAAkAAMAAAADAAIAAAAkAAQAAAADAAIAAAAcAAoAAQABAAEAAAAiAAkAAQANAAQAAAAQAA0AAAADAAIAAAAQAAwAAAADAAIAAAAQAAsAAAADAAEAAAAPAAsAAAACAAEAAAAOAAsAAAACAAEAAAANAAsAAAACAAEAAAAMAAsAAAACAAEAAAALAAsAAAACAAEAAAAKAAsAAAACAAEAAAAJAAsAAAABAAEAAAAOAA4AAAAEAAEAAAAOAA8AAAADAAIAAAAOABAAAAADAAIAAAAOABEAAAADAAIAAAAOABQAAAADAAMAAAANABQAAAACAAMAAAAMABQAAAACAAMAAAALABQAAAACAAMAAAAKABQAAAACAAMAAAAJABQAAAABAAMAAAAJABEAAAABAAIAAAAJABIAAAABAAIAAAAJABAAAAABAAIAAAAJAA8AAAABAAIAAAAJAA4AAAABAAIAAAAJAA0AAAABAAIAAAAJAAwAAAABAAIAAAAQABAAAQAHAAEAAAAWAAUAAAABAAIAAAAWAAYAAAABAAIAAAAWAAcAAAABAAIAAAAOABIAAAADAAIAAAAQAAAAAAABAAIAAAAQAP//AAABAAIAAAAQAP7/AAABAAIAAAAQAP3/AAABAAEAAAARAP3/AAACAAEAAAASAP3/AAACAAEAAAATAP3/AAACAAEAAAAUAP3/AAACAAEAAAAVAP3/AAACAAEAAAAWAP3/AAACAAEAAAAXAP3/AAACAAEAAAAYAP3/AAACAAEAAAAZAP3/AAACAAEAAAAaAP3/AAACAAEAAAAbAP3/AAACAAEAAAAcAP3/AAACAAEAAAAdAP3/AAACAAEAAAAeAP3/AAACAAEAAAAfAP3/AAACAAEAAAAgAP3/AAACAAEAAAAhAP3/AAACAAEAAAAiAP3/AAACAAEAAAAjAP3/AAACAAEAAAAkAP3/AAADAAEAAAAkAP7/AAADAAIAAAAkAP//AAADAAIAAAAWAAMAAAAIAAEAAAAVAAQAAAACAAMAAAAUAAQAAAACAAMAAAATAAQAAAACAAMAAAASAAQAAAACAAMAAAARAAQAAAACAAMAAAAQAAQAAAABAAMAAAAQAAEAAAABAAIAAAAQAAIAAAABAAIAAAAWAAQAAAABAAIAAAA=")
tile_set = ExtResource("1_vmfcw")
metadata/_edit_lock_ = true

[node name="WallMapFloor2" type="TileMapLayer" parent="TileMap"]
z_index = 1
tile_map_data = PackedByteArray("AAALABEAAAABAAMAAAAMABEAAAACAAMAAAANABEAAAADAAMAAAANAA8AAAADAAIAAAANAA4AAAADAAIAAAANAA0AAAADAAEAAAAMAA0AAAACAAEAAAALAA0AAAABAAEAAAALAA4AAAABAAIAAAALAA8AAAABAAIAAAAZAAUAAAABAAMAAAAaAAUAAAACAAMAAAAbAAUAAAACAAMAAAAcAAUAAAACAAMAAAAfAAUAAAACAAMAAAAgAAUAAAACAAMAAAAhAAUAAAADAAMAAAAhAAMAAAADAAIAAAAhAAIAAAADAAIAAAAhAAEAAAADAAIAAAAhAAAAAAADAAIAAAAhAP//AAADAAEAAAAgAP//AAACAAEAAAAfAP//AAACAAEAAAAeAP//AAACAAEAAAAdAP//AAACAAEAAAAcAP//AAACAAEAAAAbAP//AAACAAEAAAAaAP//AAACAAEAAAAZAP//AAABAAEAAAAZAAAAAAABAAIAAAAZAAEAAAABAAIAAAAZAAIAAAABAAIAAAAZAAMAAAABAAIAAAAeAAUAAQANAAQAAAA=")
tile_set = ExtResource("1_vmfcw")
metadata/_edit_lock_ = true

[node name="StaticObects" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Creep" parent="StaticObects" instance=ExtResource("2_boupy")]
position = Vector2(872, 466)
disable_mode = 2

[node name="HeroScene" parent="StaticObects" instance=ExtResource("3_21nl1")]
unique_name_in_owner = true
position = Vector2(592, 512)
scale = Vector2(1.5, 1.5)

[node name="Tree" parent="StaticObects" instance=ExtResource("4_f4gjm")]
position = Vector2(575, 422)
texture_id = 0

[node name="Tree2" parent="StaticObects" instance=ExtResource("4_f4gjm")]
position = Vector2(709, 577)

[node name="Tree3" parent="StaticObects" instance=ExtResource("4_f4gjm")]
position = Vector2(977, 399)
texture_id = 1

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="StaticObects"]
